vithimurai heading spacing issues fixed

--- a/css/style.less
+++ b/css/style.less
@@ -140,6 +140,7 @@ body {
 
         .section {
             width: 100%;
+            // height: 100vh;
             margin-top: 80px;
             background-color: rgba(0, 0, 0, 0.521);
             background-size: cover;
@@ -451,8 +452,8 @@ body {
                                 .mobile {
                                     display: inline;
                                     text-align: left;
-                                    
-                                  
+
+
 
                                     .mobileNumber {
                                         color: #fff76a;
@@ -478,7 +479,7 @@ body {
 
                                 .email {
                                     .mail {
-                              
+
 
                                         .mailAddress {
                                             color: #fff76a;
@@ -684,6 +685,7 @@ body {
 
                                 .image {
                                     border-radius: 10px;
+                                    max-width: 260px;
                                     width: 100%;
                                     height: 177px;
                                 }
@@ -929,14 +931,6 @@ body {
                         margin-top: 15px;
 
 
-                    }
-
-                    .round-2 {
-                        .heading {
-                            h2 {
-                                line-height: 65px;
-                            }
-                        }
                     }
 
                 }
@@ -1495,6 +1489,7 @@ body {
                         p {
                             line-height: 18px;
                             font-size: 14px;
+                            font-weight: normal;
                         }
                     }
                 }
@@ -1525,9 +1520,9 @@ body {
                     .round-2 {
                         .heading {
                             h2 {
-                                line-height: 40px;
                                 text-align: center;
                                 font-size: 26px;
+                                line-height: 50px;
                                 padding: 5px 0px;
 
 
